--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.android.support:support-v13:19.1.0'
+    compile 'com.commonsware.cwac:wakeful:1.0.+'
 }
