--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
+        maven{ url "https://repo.commonsware.com.s3.amazonaws.com"}
     }
 }
